--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,12 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20200518</version>
+        </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
